# gtest-dll-testing

./: CMakeLists.txt  README.md  README_CN.md
src/: CMakeLists.txt
src/ModuleA/: CMakeLists.txt  ModuleA.cpp  ModuleA.h
src/ModuleB/: CMakeLists.txt  ModuleB.cpp  ModuleB.h
tests/: CMakeLists.txt
tests/ModuleATest/: CMakeLists.txt  ModuleATest.cpp  ModuleATest.h
tests/ModuleATest/gui/menu/: menu_test.cpp
tests/ModuleATest/gui/widget/: button_test.cpp
tests/ModuleBTest/: CMakeLists.txt  ModuleBTest.cpp  ModuleBTest.h  StringUtilBasicTest.cpp  StringUtilSplitJoinTest.cpp  StringUtilTrimTest.cpp
tests/test_runner/: test_main.cpp
